# life-sciences-info

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: bootstrap.py  config.py  db.py  jobs.py  main.py  models.py  scheduler.py  schemas.py  workers.py
backend/app/api/: routes.py
backend/app/services/: catalysts.py  clinical_trials.py  constants.py  digest_email.py  digests.py  email.py  events.py  filings.py  html_pdf.py  market_caps.py  market_data.py  news.py  pdf.py  ranking.py  regulatory_events.py  sec.py  storage.py  summarization.py  summary_budget.py  universe.py  watchlists.py
backend/life_sciences_intel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin_api.py  test_clinical_trials.py  test_company_api.py  test_db.py  test_digest_api.py  test_events.py  test_filings.py  test_jobs.py  test_market_caps.py  test_market_data.py  test_news.py  test_ranking.py  test_regulatory_events.py  test_scheduler.py  test_summarization.py  test_universe.py
docs/: deployment.md
web/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/components/: app-shell.tsx  cards.tsx  collapsible-section.tsx  event-provider.tsx  keyboard-provider.tsx  markdown.tsx  mobile-sidebar.tsx  sidebar-nav.tsx  skeletons.tsx  summary-actions.tsx  theme-toggle.tsx  watchlist-actions.tsx
web/lib/: api.ts  use-events.ts  (+1 more)
(+14 files in other folders)
