[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-sciences-intel-backend"
version = "0.1.0"
description = "Life sciences filings and news intelligence platform"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "boto3>=1.37.0",
  "dramatiq[redis]>=1.17.1",
  "feedparser>=6.0.11",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.7.1",
  "python-dateutil>=2.9.0.post0",
  "psycopg[binary]>=3.2.6",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.39",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

